// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=2 1`] = `
{
  "adjustedReturn": {
    "usd": "39.080515131939180597564",
    "valueInCurrency": "13.843437128589739081572",
  },
  "cost": {
    "usd": "240.919484868060819402436",
    "valueInCurrency": "0.156562871410260918428",
  },
  "gasFee": {
    "effective": {
      "amount": "7.141025952e-8",
      "usd": "0.0000014282051904",
      "valueInCurrency": "7.141025952e-8",
    },
    "max": {
      "amount": "9.933761952e-8",
      "usd": "0.0000019867523904",
      "valueInCurrency": "9.933761952e-8",
    },
    "total": {
      "amount": "7.141025952e-8",
      "usd": "0.0000014282051904",
      "valueInCurrency": "7.141025952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "39.100516560144370997564",
    "valueInCurrency": "13.844437199999998601572",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100009933761952",
    "usd": "0.0200019867523904",
    "valueInCurrency": "0.00100009933761952",
  },
  "totalNetworkFee": {
    "amount": "0.00100007141025952",
    "usd": "0.0200014282051904",
    "valueInCurrency": "0.00100007141025952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=false,quotesRefreshCount=5 1`] = `
{
  "adjustedReturn": {
    "usd": "13.84343712858974048",
    "valueInCurrency": "13.84343712858974048",
  },
  "cost": {
    "usd": "0.15656287141025952",
    "valueInCurrency": "0.15656287141025952",
  },
  "gasFee": {
    "effective": {
      "amount": "7.141025952e-8",
      "usd": "7.141025952e-8",
      "valueInCurrency": "7.141025952e-8",
    },
    "max": {
      "amount": "9.933761952e-8",
      "usd": "9.933761952e-8",
      "valueInCurrency": "9.933761952e-8",
    },
    "total": {
      "amount": "7.141025952e-8",
      "usd": "7.141025952e-8",
      "valueInCurrency": "7.141025952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "14",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100009933761952",
    "usd": "0.00100009933761952",
    "valueInCurrency": "0.00100009933761952",
  },
  "totalNetworkFee": {
    "amount": "0.00100007141025952",
    "usd": "0.00100007141025952",
    "valueInCurrency": "0.00100007141025952",
  },
}
`;

exports[`Bridge selectors getBridgeQuotes returns quote list and fetch data, insufficientBal=true 1`] = `
{
  "adjustedReturn": {
    "usd": "13.8244357717948096",
    "valueInCurrency": "13.84343712858974048",
  },
  "cost": {
    "usd": "266.1755642282051904",
    "valueInCurrency": "0.15656287141025952",
  },
  "gasFee": {
    "effective": {
      "amount": "7.141025952e-8",
      "usd": "0.0000014282051904",
      "valueInCurrency": "7.141025952e-8",
    },
    "max": {
      "amount": "9.933761952e-8",
      "usd": "0.0000019867523904",
      "valueInCurrency": "9.933761952e-8",
    },
    "total": {
      "amount": "7.141025952e-8",
      "usd": "0.0000014282051904",
      "valueInCurrency": "7.141025952e-8",
    },
  },
  "includedTxFees": null,
  "minToTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "sentAmount": {
    "amount": "14",
    "usd": "280",
    "valueInCurrency": "14",
  },
  "swapRate": "0.99887714285714285714",
  "toTokenAmount": {
    "amount": "13.98428",
    "usd": "13.8444372",
    "valueInCurrency": "13.8444372",
  },
  "totalMaxNetworkFee": {
    "amount": "0.00100009933761952",
    "usd": "0.0200019867523904",
    "valueInCurrency": "0.00100009933761952",
  },
  "totalNetworkFee": {
    "amount": "0.00100007141025952",
    "usd": "0.0200014282051904",
    "valueInCurrency": "0.00100007141025952",
  },
}
`;
